--- a/Register_Form.html
+++ b/Register_Form.html
@@ -53,7 +53,8 @@
                 </td>
             </tr>
             <tr>
-                <td colspan="2"><input type="submit" value="submit"></td>
+                <td></td>
+                <td><input class="button" type="submit" value="submit"></td>
             </tr>
         </table>
     </form>
