Background setting are modified

--- a/Register_Form.html
+++ b/Register_Form.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <div class="header">Registration Form</div>
     <form class="form_content">
         <table class="container">
             <tr>
